--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "homepage": "https://github.com/SlimIO/Manifester#readme",
     "dependencies": {
         "@iarna/toml": "^2.2.1",
-        "@slimio/is": "^1.4.0"
+        "@slimio/is": "^1.4.0",
+        "semver": "^5.6.0"
     },
     "devDependencies": {
         "@commitlint/cli": "^7.5.2",
