--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
     "name": "@slimio/manifest",
     "version": "0.1.0",
-    "description": "",
+    "description": "This package was created to manage manifest for the SlimIO Project.",
     "main": "index.js",
     "scripts": {
         "prepublishOnly": "pkg-ok",
