--- a/package.json
+++ b/package.json
@@ -49,7 +49,7 @@
     },
     "husky": {
         "hooks": {
-            "pre-push": "cross-env npm test",
+            "pre-push": "npm test",
             "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
         }
     },
