--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "eslint": "^5.14.0",
         "husky": "^1.3.1",
         "jsdoc": "^3.5.5",
+        "lodash.clonedeep": "^4.5.0",
         "nyc": "^13.3.0",
         "pkg-ok": "^2.3.1"
     },
