--- a/slimio.toml
+++ b/slimio.toml
@@ -1,5 +1,6 @@
-name = "manifest"
-version = "0.2.0"
-type = "CLI"
-[doc]
-include = ["index.js"]
+name = "My project"
+version = "7.7.7"
+type = "Addon"
+
+[dependencies]
+Event = "1.1.1"
