--- a/.eslintrc
+++ b/.eslintrc
@@ -1,6 +1,3 @@
 {
-    "extends": "@slimio/eslint-config",
-    "rules": {
-        "accessor-pairs": "off"
-    }
+    "extends": "@slimio/eslint-config"
 }
